--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ footer {
     color: white;
 }
 .download {
+    padding: 100px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -62,10 +63,7 @@ a {
 .movie-name {
     padding-top: 1.5rem;
 }
-.logo {
-    border-radius: 1rem;
-    box-shadow: 0px 5px 15px #ccc;
-}
+
 .name {
     padding-top: 1.5rem;
 }
